# darkcontract

./: Cargo.toml  README  values
examples/: README  darkcontract.rs  darktoken.rs  pina.rs
src/: bls_extensions.rs  coconut.rs  elgamal.rs  lib.rs  main.rs  old_proofs.rs  parameters.rs  proofs.rs  utility.rs
src/coconut/: coconut.rs  mod.rs  tests.rs
src/proofs/: credential_proof.rs  mod.rs  proof.rs  signature_proof.rs  signature_request_proof.rs  tests.rs
