[package]
name = "darktoken"
version = "0.0.5"
authors = ["Amir Taaki <amir@dyne.org>"]
license = "GPL-3.0-or-later"
description = "dark credentials and tokens with multiple attributes and custom schnorr proofs"
edition = "2018"
repository = "https://github.com/narodnik/darktoken"
exclude = [
    "extern/*"
]

[dependencies]
itertools = "0.8.2"
rand_core = "0.5.1"
rand = "0.7.2"
sha2 = "0.8.0"
bls12_381 = { version = "0.1.1" }

